<resources>
    <string name="app_name">Work Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="dash">-</string>
    <string name="loading">Loading&#8230;</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="none">None</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="yearsShort">y</string>
    <string name="monthsShort">m</string>
    <string name="daysShort">d</string>
    <string name="hoursShort">h</string>
    <string name="minutesShort">m</string>
    <string name="secondsShort">s</string>
    <string name="dayMondayShort">Mon</string>
    <string name="dayTuesdayShort">Tue</string>
    <string name="dayWednesdayShort">Wed</string>
    <string name="dayThursdayShort">Thu</string>
    <string name="dayFridayShort">Fri</string>
    <string name="daySaturdayShort">Sat</string>
    <string name="daySundayShort">Sun</string>
    <string name="lbl_delete_all">Delete all</string>
    <string name="lbl_do_nothing">Do nothing</string>
	<string name="dialog_title_error">Error</string>
    <string name="warning_msg_external_storage_unavailable">The storage is not available at the moment. Make sure it\'s mounted and try again. On older devices an SD-card is expected.</string>
    <string name="warning_msg_external_storage_unavailable_short">The storage is not available.</string>
    <string name="warning_msg_external_storage_unwritable">The storage is not writable. You can try again, if this errors stays contact a specialist.</string>
    <string name="warning_msg_external_storage_unwritable_short">The storage is not writable.</string>
    <string name="warning_msg_sd_car_unavailable">Make sure the SD-card is in the device and the SD-card is mounted.</string>
    <string name="warning_msg_sd_car_unavailable_short">No SD-card found</string>
    <string name="acra_crash_report_send">The application has crashed and a crash-report has been sent to the developers</string>
    <string name="error_general_web_exception">Something went wrong while connecting to the web. Please try again. Possibly the server may be down. If you keep seeing this error please report a bug.</string>
    <string name="error_no_network_connection">Your device seems to be offline. Please make sure an internet connection is active and try again.</string>
    <string name="enum_recurrence_daily">Daily</string>
    <string name="enum_recurrence_weekly">Weekly</string>
    <string name="enum_weekly_recurrence_pattern_every_day">Every Day</string>
    <string name="enum_weekly_recurrence_pattern_weekend">Weekend</string>
    <string name="enum_weekly_recurrence_pattern_weekdays">Weekdays</string>
    <string name="enum_weekly_recurrence_pattern_custom">Custom</string>
    <string name="enum_weekly_recurrence_end_doesnt_end">Doesn\'t End</string>
    <string name="enum_weekly_recurrence_end_after_times">After certain times</string>
    <string name="enum_weekly_recurrence_end_after_date">After certain date</string>
    <string name="validation_basic_message">Validation error</string>
    <string name="validation_basic_big_message">A validation error has occurred</string>
    <string name="error_general_required_field">This field is required</string>
    <string name="date_time_selection_button_text_date">Select a date</string>
    <string name="date_time_selection_button_text_time">Select a time</string>
    <string name="home_ab_menu_about">About</string>
    <string name="home_ab_menu_account">Account</string>
    <string name="home_btn_timeregs">Registrations</string>
    <string name="home_btn_projects">Projects</string>
    <string name="home_btn_preferences">Preferences</string>
    <string name="home_btn_reporting">Reporting</string>
    <string name="home_btn_triggers">Automatic Triggers</string>
    <string name="home_comp_start_stop_time_registration_no_ongoing">No ongoing time registration!</string>
    <string name="showcase_home_title">Application Menu</string>
    <string name="showcase_home_text">Open the application menu by clicking the home button</string>
    <string name="showcase_punchbar_title">Punch Bar</string>
    <string name="showcase_punchbar_text">Quickly start and stop a time registration from the punch bar.</string>
    <string name="showcase_projects_title">Projects and Tasks</string>
    <string name="showcase_projects_text">Manage projects and tasks to which your time registrations will be linked</string>
    <string name="showcase_reporting_title">Reporting</string>
    <string name="showcase_reporting_text">Generate reports of your registered data and export to Excel</string>
    <string name="showcase_preferences_title">Preferences</string>
    <string name="showcase_preferences_text">Manage all kinds of settings for time registrations, projects, date and time, account,...</string>
    <string name="showcase_account_title">Online Account</string>
    <string name="showcase_account_text">Create an online account and keep all your data backed up online</string>
    <string name="showcase_about_title">Donate</string>
    <string name="showcase_about_text">If you like the application you can donate to support the development.</string>
    <string name="btn_manage_projects_title">Manage Projects</string>
    <string name="manage_projects_ab_menu_new">New project</string>
    <string name="manage_projects_ab_menu_show_unfinished">Show only unfinished projects</string>
    <string name="manage_projects_ab_menu_show_all">Show all projects</string>
    <string name="msg_delete_project_confirmation">Do you want to delete this project?</string>
    <string name="lbl_empty_project_list">No projects available.</string>
    <string name="lbl_projects_menu_details">View details</string>
    <string name="lbl_projects_menu_delete">Delete project</string>
    <string name="lbl_projects_menu_mark_finished">Mark finished</string>
    <string name="lbl_projects_menu_mark_unfinished">Mark unfinished</string>
    <string name="msg_mark_project_finished_with_unfinished_tasks_confirmation">This project has unfinished tasks left. Are you sure you want to finish this project?</string>
    <string name="msg_mark_project_finished_not_possible_ongoing_tr">The project cannot be marked as finished as it\'s used in an ongoing time registration&#8230;</string>
    <string name="lbl_projects_menu_add">Add new project</string>
    <string name="lbl_projects_menu_edit">Edit project</string>
    <string name="lbl_projects_menu_copy">Copy project and tasks</string>
    <string name="lbl_add_project_title">Add Project</string>
    <string name="lbl_edit_project_title">Edit Project</string>
    <string name="add_project_ab_menu_save">Save</string>
    <string name="lbl_add_project_name">Project-name:</string>
    <string name="lbl_add_project_comment">Comment:</string>
    <string name="lbl_project_name_not_unique">This name is already in use. Please choose another one.</string>
    <string name="lbl_project_name_required">The name of the project is a required field!</string>
    <string name="project_details_ab_menu_edit">Edit project</string>
    <string name="project_details_ab_menu_delete">Delete project</string>
    <string name="project_details_ab_menu_add_task">Add task</string>
    <string name="project_details_ab_menu_show_finished_tasks">Show only unfinished tasks</string>
    <string name="project_details_ab_menu_show_all_tasks">Show all tasks</string>
    <string name="project_details_ab_menu_reporting">Reporting</string>
    <string name="lbl_project_details_no_comment">No comment entered for this project</string>
    <string name="lbl_project_details_total_time_spent">Total time spent:</string>
    <string name="lbl_project_details_punch_in_count">&#8220;Punch In&#8221; count:</string>
    <string name="lbl_project_details_tasks_title">Tasks for this project:</string>
    <string name="lbl_project_details_tasks_nothing_found">No tasks available yet</string>
    <string name="msg_delete_task_confirmation">Do you want to delete this task?</string>
    <string name="msg_delete_task_and_linked_time_registrations_confirmation">Time registrations for this task have been found. Do you want to delete all those time registrations and the task or do nothing?</string>
    <string name="msg_delete_project_and_all_tasks">The project has tasks. Do you want to remove the project and all of it\'s tasks? This action cannot be undone!</string>
    <string name="msg_delete_project_and_all_tasks_and_all_time_registrations">The project has tasks and time registrations. Do you want to remove the project and all of it\'s tasks and time registrations? This action cannot be undone!</string>
    <string name="msg_delete_project_ongoing_time_registration">The project cannot be deleted because it has an ongoing time registration. Stop the time registration first and try again afterwards.</string>
    <string name="msg_mark_task_finished_not_possible_ongoing_tr">The task cannot be marked as finished as it\'s used in an ongoing time registration&#8230;</string>
    <string name="lbl_tasks_menu_edit">Edit task</string>
    <string name="lbl_tasks_menu_move">Move task</string>
    <string name="lbl_tasks_menu_mark_unfinished">Mark unfinished</string>
    <string name="lbl_tasks_menu_mark_finished">Mark finished</string>
    <string name="lbl_tasks_menu_reporting">Reporting</string>
    <string name="lbl_tasks_menu_delete">Delete task</string>
    <string name="lbl_tasks_menu_add">Add new task</string>
    <string name="lbl_copy_project_title">Copy Project</string>
    <string name="lbl_copy_project_part_one_content">In position to copy a project you will have to provide a new, unique, name on the next screen. Pay attention because the project will be copied (with the new name) and together all of it\'s tasks. But time registrations for the project and tasks will not be copied!\n\nPress &#8216;Next&#8217; to continue with the copy.</string>
    <string name="lbl_copy_project_part_two_title">Set a project name</string>
    <string name="lbl_copy_project_part_two_copy_all_tasks_chekced">Copy all tasks</string>
    <string name="lbl_copy_project_part_two_copy_all_tasks_unchekced">Only copy unfinished tasks</string>
    <string name="lbl_copy_project_part_three_title">Summary</string>
    <string name="lbl_reporting_export_title">Export Result</string>
    <string name="lbl_reporting_export_filename">Filename</string>
    <string name="lbl_reporting_export_filename_required">The filename is required and should contain at least 3 characters</string>
    <string name="lbl_reporting_export_csv_separator">CSV Separator</string>
    <string name="lbl_trigger_geo_fencing_add_edit_name">Name</string>
    <string name="lbl_trigger_geo_fencing_add_edit_radius">Radius</string>
    <string name="lbl_trigger_geo_fencing_add_edit_expires">Expires?</string>
    <string name="lbl_trigger_geo_fencing_add_edit_expires_checkbox">Expires</string>
    <string name="lbl_trigger_geo_fencing_add_edit_select_date_checkbox">Select expiration date</string>
    <string name="empty_content_description"></string>
    <string name="content_description_project_locked_unlocked">Locked or unlocked projects</string>
    <string name="content_description_add_project">Add project</string>
    <string name="donations__google_android_market_donate_button">Donate!</string>
    <string name="donations__google_android_market">Google Play Store</string>
    <string name="donations__google_android_market_description">Choose an amount to donate using the Google Play Store:</string>
    <string name="donations__google_android_market_text">How much?</string>
</resources>