<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Dirk Vranckaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".activities.triggers.TriggerGeoFencingAddEditActivity">
    <include layout="@layout/custom_validation"/>

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
                 android:padding="5dp">
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_trigger_geo_fencing_add_edit_name"
                      android:paddingRight="10dp"/>
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:singleLine="true"
                      android:id="@+id/trigger_geo_fencing_add_edit_name"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_trigger_geo_fencing_add_edit_radius"
                      android:paddingRight="10dp"/>
            <SeekBar android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/trigger_geo_fencing_add_edit_radius"
                     android:max="100"
                     android:progress="20"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_trigger_geo_fencing_add_edit_expires"
                      android:paddingRight="10dp"/>
            <CheckBox android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:checked="false"
                      android:text="@string/lbl_trigger_geo_fencing_add_edit_expires_checkbox"
                      android:id="@+id/trigger_geo_fencing_add_edit_expires"/>
        </TableRow>
        <TableRow>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingRight="10dp"/>
            <Button android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_trigger_geo_fencing_add_edit_select_date_checkbox"
                    android:id="@+id/trigger_geo_fencing_add_edit_expiration_date"
                    android:visibility="gone"/>
        </TableRow>
        <include layout="@layout/custom_project_task_selection"/>
    </TableLayout>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/map"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>
</LinearLayout>