<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2012 Dirk Vranckaert
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <eu.vranckaert.worktime.utils.view.CustomTextView
                style="@style/TitleBarText" android:text="@string/lbl_reporting_export_title"/>

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:src="@drawable/ic_title_export"
            android:onClick="onExportClick" />
    </LinearLayout>

    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <!-- Filename -->
            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/lbl_reporting_export_filename"/>
            <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/reporting_export_filename_required"
                  style="@style/WorkTimeValidationError"
                  android:text="@string/lbl_reporting_export_filename_required"/>
            <EditText android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/reporting_export_filename"
                      android:inputType="text"/>

            <!-- TODO: dropdown for selection of CSV or Excel -->

            <!-- In case of CSV: CSV seperator -->
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">
                <ImageView style="@style/WorkTimeListSeparator" />
                <TextView android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/lbl_reporting_export_csv_separator"/>
                <Button android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/reporting_export_csv_separator_btn"/>
            </LinearLayout>

            <!-- TODO: In case of CSV: Dropdown for data (raw or table) -->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
